[workspace]
members = ["book-examples/*", "packages/*", "scripts"]
resolver = "2"

[workspace.package]
authors = ["Rust for Web <info@rustforweb.org>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/RustForWeb/lucide"
version = "2.34.0"

[workspace.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
dioxus = "0.6.0"
leptos = "0.8.0"
log = "0.4.22"
yew = "0.21.0"
